# document-intelligence

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/document_intel/: __init__.py  exceptions.py  logging_config.py
src/document_intel/processors/: pdfplumber_processor.py
tests/: test_pdfplumber_processor.py
