[tool.poetry]
name = "document-intelligence"
version = "0.1.0"
description = "PDF processors & document intelligence utilities"

# Tell Poetry to install the src/document_intel package
[[tool.poetry.packages]]
include = "document_intel"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.11"
marker-pdf = { version = "*", optional = true }
structlog = "23.1.0"
fastapi = ">=0.110.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-mock = "^3.0"
black = "^24.0"
mypy = "^1.9"
pre-commit = "^3.0"
